@@ -80,6 +80,9 @@ Unreleased changes (0.9-dev)
 
 26. NUTCH-403 - Make URL filtering optional in Generator (siren)
 
+27. NUTCH-405 - Content object is not properly initialized in map method
+    of ParseSegment (siren)
+
 Release 0.8 - 2006-07-25
 
  0. Totally new architecture, based on hadoop
